# clm-ocr

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
examples/: advanced_usage.py  basic_usage.py
src/clm_ocr/: __init__.py  client.py  config.py  main.py  processor.py
tests/: conftest.py  test_config.py  test_main.py  test_processor.py
